assets/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/*<--header-->*/

header {
    background-color:dodgerblue;
    display: flex;
    justify-content:space-around;
}

h1 {
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 40px;
    color: floralwhite;
    margin: 15px;
    padding: 20px;
}

header nav {
    display: flex;
    flex-wrap: wrap;
}

header nav ul {
    font-size: 25px;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    list-style-type: none;
}

header nav ul li a {
    padding: 10px 40px;
}

header a {
    text-decoration: none;
    color:floralwhite;
}

header a:hover {
    color:firebrick;
}

header a:visited {
    text-decoration: none;
}

/* body section */

body {
    background-color:midnightblue;
}

/* hero section */

.hero {
    background-image: url('./images/hero-image.jpg');
    background-size: cover;
    background-position: 80%;
    padding: 450px 0 20px 0;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    align-items: flex-start;
}

h2 {
    text-align: center;
    font-size: 50px;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    color:whitesmoke;
    margin-top: 60px;
}

/* about me section */

.about-me-section {
    color: white;
    padding: 20px;
    display: flex;
    font-size: 25px;
    margin: 20px;
    font-family:Georgia, 'Times New Roman', Times, serif;
}

.about-me-section, img {
    height: 400px;
    max-width: auto;
    position: relative;
}

p {
    display: flex;
    margin: 50px;
    text-align: left;
    position: relative;
}

/* project section */

.main-project {
    color: white;
    display: flex;
    background-image: url('./images/main-project-image.jpg');
    background-position: 80%;
    background-size: 100%;
    justify-content: center;
    align-items: center;
    width: 80%;
    height: 380px;
    font-size: 60px;
    font-weight: bolder;
    margin: 50px auto;
    border: 2px floralwhite solid;
    border-width: 7px;
    text-decoration: none;
}

.projects-section {
    display: flex;
    flex-wrap: wrap;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    justify-content: space-evenly;
    margin-top: 0px;
}

.project-info-1 {
    color: white;
    font-size: 20px;
    font-weight: bolder;
    margin: 50px auto;
    padding: 100px 200px;
    border: 2px floralwhite solid;
    border-width: 7px;
    text-decoration: none;
    background-image: url('./images/project-image-1.jpg');
    background-size: 100%;
}

.project-info-2 {
    color: white;
    font-size: 20px;
    font-weight: bolder;
    margin: 50px auto;
    padding: 100px 200px;
    border: 2px floralwhite solid;
    border-width: 7px;
    text-decoration: none;
    background-image: url('./images/project-image-2.jpg');
    background-size: 100%;
    background-position:right;
}

.project-info-3 {
    color: white;
    font-size: 20px;
    font-weight: bolder;
    margin: 50px auto;
    padding: 100px 200px;
    border: 2px floralwhite solid;
    border-width: 7px;
    text-decoration: none;
    background-image: url('./images/project-image-3.jpg');
    background-size: 100%;
    background-position: left;
}

.project-info-4 {
    color: white;
    font-size: 20px;
    font-weight: bolder;
    margin: 50px auto;
    padding: 100px 200px;
    border: 2px floralwhite solid;
    border-width: 7px;
    text-decoration: none;
    background-image: url('./images/project-image-4.jpg');
}

.project-info-1:hover,
.project-info-2:hover,
.project-info-3:hover,
.project-info-4:hover {
    opacity: 0.8;
}

.main-project:hover {
    opacity: 0.8;
}

.project-info-1, a:link,
.project-info-2, a:link,
.project-info-3, a:link,
.project-info-4, a:link {
    text-decoration: none;
    font-family: Arial, Helvetica, sans-serif;
}

.project-info-1, a:visited,
.project-info-2, a:visited,
.project-info-3, a:visited,
.project-info-4, a:visited {
    text-decoration: none;
    color:floralwhite;
}

/* my skills section */

.skill-section {
    font-size: 35px;
    color: white;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    display: flex;
    padding: 20px;
    justify-content: space-evenly;
}

.skill-section ul {
    list-style-type: none;
}

/* contact me section */

.contact-section {
    display: flex;
    justify-content: center;
    padding: 135px;
    margin-bottom: 0;
}

.contact-section h2 {
    margin-top: 15px;
}

.contact-section ul {
    font-size: 30px;
    color:whitesmoke;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    list-style-type: none;
    padding: 20px;
    justify-content: space-evenly;
}

.contact-section a {
    text-decoration: none;
    color: white;
}

.contact-section a:hover {
    color: red;
    text-decoration: none;
}

/*media queries*/

@media screen and (max-width: 697px) {

    header {
        text-align: center;
        }

    body {
        width: fit-content;
    }
}

@media screen and (max-width: 749px) {

    body {
        width: fit-content;
    }
}

@media screen and (max-width: 825px) {
    header nav ul li {
        font-size: 21px;
        text-align: center;
    }
}

@media screen and (max-width: 980px) {

    header nav ul li {
        position: relative;
    }
}

@media screen and (max-width: 1024px) {
    
    header {
        display: block;
        font-size: 30px;
        padding: 20px;
    }

    h1 {
        text-align: center;
    }

    header nav {
        display: flex;
        justify-content: space-evenly;
        margin-bottom: 15px;
    }
}

